examples/test/testpolicy9961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9961
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key10: value28
      key28: value31
      key35: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value23
      podSelector:
        matchLabels:
          key3: value4
          key48: value30
          key2: value16
